# EDA-BANK-PROFILER

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  example_run.py  pypi_methods.md  pyproject.toml  test_auto_load.py
.github/workflows/: publish.yml
bank_eda_profiler/: __init__.py  cli.py  config.py  profiler.py
bank_eda_profiler/banking/: __init__.py  activation.py  campaign.py  cohort.py  dormancy.py  funnel.py  kpi_definitions.py  kyc.py  readiness.py  regional_mis.py  report_requirements.py  sales_productivity.py  schemas.py  segmentation.py
bank_eda_profiler/engines/: __init__.py  base.py  duckdb_engine.py  pandas_engine.py  polars_engine.py
bank_eda_profiler/io/: __init__.py  column_mapping.py  entity_detection.py  readers.py  schema_inference.py
bank_eda_profiler/profiling/: __init__.py  fg_profile.py  generic_profile.py  privacy_scan.py
bank_eda_profiler/reports/: __init__.py  charts.py  excel_report.py  html_report.py  insights.py  powerbi_export.py  tableau_export.py
bank_eda_profiler/reports/templates/: activation_quality.html  base.html  daily_sales.html  dashboard.html  generic_report.html  index.html  profile.html  readiness.html
config/: report_config.example.yaml
data/: account_application_funnel.parquet  account_master.parquet  app_event_log.parquet  campaign_master.parquet  customer_master.parquet  customer_product_holding.parquet  lead_master.parquet  sales_hierarchy.parquet  sales_target_achievement.parquet  service_request_complaint.parquet  transaction_fact.parquet  vkyc_session.parquet
examples/: example_basic_profile.py  generate_synthetic_banking_data.py
tests/: test_dormancy.py  test_excel_export.py  test_funnel.py  test_html_report.py  test_kpis.py  test_privacy_scan.py  test_report_requirements.py  test_schema_inference.py
